# EnvKnit

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_NOTES.md  README.md  envknit-cli.spec  pyproject.toml  test_ai_context.py
.github/workflows/: build-cli.yml  publish-python.yml  test.yml
conductor/: tracks.md
conductor/tracks/gen2-architecture/: index.md  plan.md  spec.md
crates/envknit-cli/: Cargo.toml
crates/envknit-cli/src/: cli.rs  config.rs  error.rs  global_config.rs  lib.rs  lockfile.rs  main.rs  node_resolver.rs  process_util.rs  python_resolver.rs  resolver.rs  uv_resolver.rs
crates/envknit-cli/src/backends/: conda.rs  mod.rs  pip.rs  poetry.rs
crates/envknit-cli/src/commands/: add.rs  check.rs  completions.rs  diff.rs  doctor.rs  env_create.rs  env_list.rs  env_remove.rs  export.rs  graph.rs  init.rs  init_shell.rs  install.rs  lock.rs  mod.rs  pin.rs  publish.rs  remove.rs  run.rs  status.rs  store.rs  tree.rs  upgrade.rs  verify.rs  why.rs
crates/envknit-cli/tests/: integration.rs
docs/: INSTALLATION-CONSIDERATIONS.md
docs/guide/: ci.md  cli-scripts.md  concepts.md  dependency-isolation.md  environments.md  gen2-isolation.md  getting-started.md  migration.md  node-version.md  python-api.md  python-version.md  troubleshooting.md
docs/plans/: 2026-03-03-nodejs-v3-design.md  2026-03-03-nodejs-v3.md
docs/reference/: cli.md  config-schema.md  lock-schema.md
docs/superpowers/plans/: 2026-03-25-uv-required-dependency.md
docs/superpowers/specs/: 2026-03-25-uv-required-dependency-design.md
poc/: demo.py  versioned_import.py
poc/fake_packages/mylib_v1/mylib/: __init__.py
poc/fake_packages/mylib_v2/mylib/: __init__.py
scripts/: build-cli.sh
src/envknit/: __init__.py  __main__.py
src/envknit/ai/: __init__.py  context.py
src/envknit/backends/: __init__.py  base.py  conda.py  pip.py  poetry.py
src/envknit/cli/: __init__.py  main.py
src/envknit/config/: __init__.py  schema.py
src/envknit/core/: __init__.py  graph.py  lock.py  resolver.py
src/envknit/isolation/: __init__.py  context_propagation.py  import_hook.py  patch.py  shim.py  subinterpreter.py  worker.py
src/envknit/security/: __init__.py  models.py  scanner.py
src/envknit/storage/: __init__.py  cache.py  store.py
src/envknit/utils/: __init__.py  version.py
tests/: __init__.py  conftest.py  test_ai_context.py  test_backends.py  test_cli.py  test_config_schema.py  test_configure_from_lock.py  test_context_propagation.py  test_graph.py  test_import_hook.py  test_isolation_subinterpreter.py  test_isolation_subinterpreter_cext.py  test_isolation_threading.py  test_lock.py  test_resolver.py  test_security.py  test_shim.py  test_storage.py  test_version.py  test_worker.py  test_worker_integration.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/schemas/: envknit-config.schema.json  envknit-lock.schema.json
vscode-extension/src/: extension.ts
