[package]
name = "envknit-cli"
version = "0.1.2"
edition = "2021"
description = "EnvKnit CLI — standalone binary for multi-version Python package management"
license = "MIT"

[lib]
name = "envknit_cli"
path = "src/lib.rs"

[[bin]]
name = "envknit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
# TODO: reqwest is only used by the fallback built-in resolver (resolver.rs).
# Remove when/if resolver.rs is deleted in a future cleanup pass.
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
indexmap = "2"
dirs-next = "2"
rayon = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
